--- a/Accueil.html
+++ b/Accueil.html
@@ -10,8 +10,8 @@
       height: 100%;
       width: 100%;
       font-family: Arial,sans-serif;
-      /* background: #f4f4f4 url("https://i.postimg.cc/DwgkLjqX/Galaxie.png") top center no-repeat fixed; */
-      background: #f4f4f4 url("https://github.com/marrea63/RM-MonSiteWeb/blob/main/Fond%20d'%C3%A9cran/Galaxie.png") top center no-repeat fixed;
+      background: #f4f4f4 url("https://i.postimg.cc/DwgkLjqX/Galaxie.png") top center no-repeat fixed;
+      /* background: #f4f4f4 url("https://github.com/marrea63/RM-MonSiteWeb/blob/main/Fond%20d'%C3%A9cran/Galaxie.png") top center no-repeat fixed; */ /* Fonctionne aussi */
       background-size: 100% auto;
       margin: 0px;
       padding: 0px;
