--- a/Accueil.html
+++ b/Accueil.html
@@ -970,6 +970,7 @@
             { src: 'https://i.postimg.cc/yxq5my8X/FTQ.png', link: 'https://www.fondsftq.com/fr-ca/particuliers/mon-compte-en-ligne/connexion?titreMessageSucces=SuccesLogoutTitre' },
             { src: 'https://i.postimg.cc/GhCV9KNb/GCSurplus.png', link: 'https://www.gcsurplus.ca/mn-fra.cfm?snc=wfsav&vndsld=0&fbclid=IwAR0r7kuUO2OgY9tIN54u1gjJdtUV7M09SDXKCHnJzdpRNllX5OC1PkLU5mw' },
             { src: 'https://i.postimg.cc/0203SmRD/Gilles-Beaulieu-Services-Financiers.png', link: 'https://www.gillesbeaulieu.ca/' },
+            { src: 'https://i.postimg.cc/gkw73yCK/Git-Hub-Logo.png', link: 'https://github.com/' },
             { src: 'https://i.postimg.cc/bwY59JpM/Google.png', link: 'https://www.google.com/' },
             { src: 'https://i.postimg.cc/mgd5Xsrr/Lee-Valley.png', link: 'https://www.leevalley.com/fr-ca' },
             { src: 'https://i.postimg.cc/FzQWdFTT/MDF-XL-Pages.png', link: 'https://www.mdf-xlpages.com/index.php' },
