--- a/Accueil.html
+++ b/Accueil.html
@@ -883,7 +883,7 @@
             { src: "https://i.postimg.cc/9MQn4h67/Audacity.png", link: "https://www.audacityteam.org/" },
             { src: "https://i.postimg.cc/5yXm15KQ/bitdefender.jpg", link: "https://www.bitdefender.com/fr-fr/" },
             { src: "https://i.postimg.cc/B63pTGVN/Bit-Warden.png", link: "https://bitwarden.com/" },
-            { src: "https://i.postimg.cc/G90vCWs6/CDBurner-XP.png", link: "https://cdburnerxp.se" },
+            { src: "https://i.postimg.cc/dVPB9byV/CDBurner-XP.png", link: "https://cdburnerxp.se" },
             { src: "https://i.postimg.cc/fR0f1L4B/DVD-Flick.jpg", link: "https://www.dvdflick.net/" },
             { src: "https://i.postimg.cc/pdfYX6Lj/DVDVideo-Soft.jpg", link: "https://www.dvdvideosoft.com/" },
             { src: "https://i.postimg.cc/658rG3Qt/Izarc.jpg", link: "https://www.izarc.org/" },
@@ -970,7 +970,7 @@
             { src: 'https://i.postimg.cc/yxq5my8X/FTQ.png', link: 'https://www.fondsftq.com/fr-ca/particuliers/mon-compte-en-ligne/connexion?titreMessageSucces=SuccesLogoutTitre' },
             { src: 'https://i.postimg.cc/GhCV9KNb/GCSurplus.png', link: 'https://www.gcsurplus.ca/mn-fra.cfm?snc=wfsav&vndsld=0&fbclid=IwAR0r7kuUO2OgY9tIN54u1gjJdtUV7M09SDXKCHnJzdpRNllX5OC1PkLU5mw' },
             { src: 'https://i.postimg.cc/0203SmRD/Gilles-Beaulieu-Services-Financiers.png', link: 'https://www.gillesbeaulieu.ca/' },
-            { src: 'https://i.postimg.cc/gkw73yCK/Git-Hub-Logo.png', link: 'https://github.com/' },
+            { src: 'https://i.postimg.cc/HLGbmX2W/Git-Hub-Logo.png', link: 'https://github.com/' },
             { src: 'https://i.postimg.cc/bwY59JpM/Google.png', link: 'https://www.google.com/' },
             { src: 'https://i.postimg.cc/mgd5Xsrr/Lee-Valley.png', link: 'https://www.leevalley.com/fr-ca' },
             { src: 'https://i.postimg.cc/FzQWdFTT/MDF-XL-Pages.png', link: 'https://www.mdf-xlpages.com/index.php' },
