--- a/Accueil.html
+++ b/Accueil.html
@@ -199,10 +199,10 @@
 </head>
 
 <body>
-    <!-- <a class="weatherwidget-io" href="https://forecast7.com/fr/49d22n68d15/baie-comeau/" data-label_1="BAIE-COMEAU" data-label_2="MÉTÉO" data-icons="Climacons Animated" data-theme="weather_one" >BAIE-COMEAU MÉTÉO</a>
+    <a class="weatherwidget-io" href="https://forecast7.com/fr/49d22n68d15/baie-comeau/" data-label_1="BAIE-COMEAU" data-label_2="MÉTÉO" data-icons="Climacons Animated" data-theme="weather_one" >BAIE-COMEAU MÉTÉO</a>
     <script>
       !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src='https://weatherwidget.io/js/widget.min.js';fjs.parentNode.insertBefore(js,fjs);}}(document,'script','weatherwidget-io-js');
-    </script> -->
+    </script>
 
     <!-- <script>
         (function(d, s, id) {
