--- a/Accueil.html
+++ b/Accueil.html
@@ -286,12 +286,14 @@
         href="https://forecast7.com/fr/48d42n71d24/jonquiere/"
         data-label_1="JONQUIÈRE"
         data-label_2="MÉTÉO"
+        data-icons="Climacons Animated"
         data-theme="original">JONQUIÈRE MÉTÉO</a>`;
     } else if (ville === 'beaupre') {
       widgetHTML = `<a class="weatherwidget-io"
         href="https://forecast7.com/fr/47d05n70d89/beaupre/"
         data-label_1="BEAUPRÉ"
         data-label_2="MÉTÉO"
+        data-icons="Climacons Animated"
         data-theme="original">BEAUPRÉ MÉTÉO</a>`;
     }
 
