--- a/Accueil.html
+++ b/Accueil.html
@@ -287,14 +287,14 @@
         data-label_1="JONQUIÈRE"
         data-label_2="MÉTÉO"
         data-icons="Climacons Animated"
-        data-theme="original">JONQUIÈRE MÉTÉO</a>`;
+        data-theme="weather_one">JONQUIÈRE MÉTÉO</a>`;
     } else if (ville === 'beaupre') {
       widgetHTML = `<a class="weatherwidget-io"
         href="https://forecast7.com/fr/47d05n70d89/beaupre/"
         data-label_1="BEAUPRÉ"
         data-label_2="MÉTÉO"
         data-icons="Climacons Animated"
-        data-theme="original">BEAUPRÉ MÉTÉO</a>`;
+        data-theme="weather_one">BEAUPRÉ MÉTÉO</a>`;
     }
 
     widgetDiv.innerHTML = widgetHTML;
