--- a/Accueil.html
+++ b/Accueil.html
@@ -289,7 +289,7 @@
         data-label_2="MÉTÉO"
         data-icons="Climacons Animated"
         data-theme="weather_one">JONQUIÈRE MÉTÉO</a>`;
-    } else if (ville === 'jonquiere') {
+    } else if (ville === 'alma') {
       widgetHTML = `<a class="weatherwidget-io"
         href="https://forecast7.com/fr/48d55n71d65/alma/"
         data-label_1="ALMA"
