--- a/Accueil.html
+++ b/Accueil.html
@@ -251,7 +251,7 @@
 
 <!-- Sélecteur de ville -->
 <div style="text-align:center; margin: 10px;">
-  <label for="villeSelect" style="font-size:14px;">Choisir une ville :</label>
+  <label for="villeSelect" style="font-size:14px; color:white;">Choisir une ville :</label>
   <select id="villeSelect" onchange="changerVille()" style="font-size:20px; padding:5px;">
     <option value="baie-comeau">Baie-Comeau</option>
     <option value="jonquiere">Jonquière</option>
