--- a/Accueil.html
+++ b/Accueil.html
@@ -282,35 +282,60 @@
         data-label_1="BAIE-COMEAU"
         data-label_2="MÉTÉO"
         data-icons="Climacons Animated"
-        data-theme="weather_one">BAIE-COMEAU MÉTÉO</a>`;
+        data-theme="weather_one">
+        data-accent="rgba(0, 255, 98, 0.02)" 
+        data-highcolor="#ff6b6b" 
+        data-cloudfill="#ceeefc" 
+        data-raincolor="#b3eaff" 
+        data-snowcolor="#ffffff" >BAIE-COMEAU MÉTÉO</a>`;
     } else if (ville === 'jonquiere') {
       widgetHTML = `<a class="weatherwidget-io"
         href="https://forecast7.com/fr/48d42n71d24/jonquiere/"
         data-label_1="JONQUIÈRE"
         data-label_2="MÉTÉO"
         data-icons="Climacons Animated"
-        data-theme="weather_one">JONQUIÈRE MÉTÉO</a>`;
+        data-theme="weather_one">
+        data-accent="rgba(0, 255, 98, 0.02)" 
+        data-highcolor="#ff6b6b" 
+        data-cloudfill="#ceeefc" 
+        data-raincolor="#b3eaff" 
+        data-snowcolor="#ffffff" >JONQUIÈRE MÉTÉO</a>`;
     } else if (ville === 'alma') {
       widgetHTML = `<a class="weatherwidget-io"
         href="https://forecast7.com/fr/48d55n71d65/alma/"
         data-label_1="ALMA"
         data-label_2="MÉTÉO"
         data-icons="Climacons Animated"
-        data-theme="weather_one">ALMA MÉTÉO</a>`;  
+        data-theme="weather_one">
+        data-accent="rgba(0, 255, 98, 0.02)" 
+        data-highcolor="#ff6b6b" 
+        data-cloudfill="#ceeefc" 
+        data-raincolor="#b3eaff" 
+        data-snowcolor="#ffffff" >ALMA MÉTÉO</a>`;  
     } else if (ville === 'beaupre') {
       widgetHTML = `<a class="weatherwidget-io"
         href="https://forecast7.com/fr/47d05n70d89/beaupre/"
         data-label_1="BEAUPRÉ"
         data-label_2="MÉTÉO"
         data-icons="Climacons Animated"
-        data-theme="weather_one">BEAUPRÉ MÉTÉO</a>`;
+        data-theme="weather_one">
+        data-accent="rgba(0, 255, 98, 0.02)" 
+        data-highcolor="#ff6b6b" 
+        data-cloudfill="#ceeefc" 
+        data-raincolor="#b3eaff" 
+        data-snowcolor="#ffffff" >BEAUPRÉ MÉTÉO</a>`;
     } else if (ville === 'quebec') {
       widgetHTML = `<a class="weatherwidget-io"
         href="https://forecast7.com/fr/46d81n71d21/quebec-city/"
         data-label_1="QUÉBEC"
         data-label_2="MÉTÉO"
         data-icons="Climacons Animated"
-        data-theme="weather_one">QUÉBEC MÉTÉO</a>`;  
+        data-theme="weather_one">
+        data-accent="rgba(0, 255, 98, 0.02)" 
+        data-highcolor="#ff6b6b" 
+        data-cloudfill="#ceeefc" 
+        data-raincolor="#b3eaff" 
+        data-snowcolor="#ffffff" >QUÉBEC MÉTÉO</a>`;  
     }
 
     widgetDiv.innerHTML = widgetHTML;
