--- a/Accueil.html
+++ b/Accueil.html
@@ -1025,7 +1025,7 @@
             { src: "https://i.postimg.cc/nVGWN7Rr/Assemblee-Nationale.png", link: "https://www.assnat.qc.ca/fr/index.html" },
             { src: "https://i.postimg.cc/GmHSBfcT/Canada.png", link: "https://www.canada.ca/fr.html" },
             { src: "https://i.postimg.cc/nLmR2Q9H/Chambre-Des-Communes-Du-Canada.jpg.jpg", link: "https://www.noscommunes.ca/fr" },
-            { src: "https://i.postimg.cc/7ZdtSN6s/Agrement.jpg", link: "https://msss365.sharepoint.com/sites/CISSSCN-Agrement?ovuser=06e1fe28-5f8b-4075-bf6c-ae24be1a7992%2Creal.martin.09cisss%40ssss.gouv.qc.ca&OR=Teams-HL&CT=1710352625381&clickparams=eyJBcHBOYW1lIjoiVGVhbXMtRGVza3RvcCIsIkFwcFZlcnNpb24iOiI0OS8yNDAyMDIwNTUxNSIsIkhhc0ZlZGVyYXRlZFVzZXIiOmZhbHNlfQ%3D%3D" },
+            { src: "https://github.com/marrea63/RM-MonSiteWeb/blob/742e3f2a65a587930a40535c66241d9fdbb1428e/Apps_Reseau/Agrement.JPG", link: "https://msss365.sharepoint.com/sites/CISSSCN-Agrement?ovuser=06e1fe28-5f8b-4075-bf6c-ae24be1a7992%2Creal.martin.09cisss%40ssss.gouv.qc.ca&OR=Teams-HL&CT=1710352625381&clickparams=eyJBcHBOYW1lIjoiVGVhbXMtRGVza3RvcCIsIkFwcFZlcnNpb24iOiI0OS8yNDAyMDIwNTUxNSIsIkhhc0ZlZGVyYXRlZFVzZXIiOmZhbHNlfQ%3D%3D" },
             { src: "https://i.postimg.cc/wv0hQ62q/Sharepoint.jpg", link: "https://msss365.sharepoint.com/teams/CISSSCN-DRIGestionprojets-TM" }
           ],
             No_De_Permis: 
