--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
   
     <!-- Barre de navigation -->
     <div class="gallery2">
-    <img src="https://i.postimg.cc/cLBJKH1J/Apps-Courantes.png" class="thumbnail" onclick="showSubGallery('Apps_Courantes','subGallery2')">
+    <img src=".Barre_navigation/Apps-Courantes.png" class="thumbnail" onclick="showSubGallery('Apps_Courantes','subGallery2')">
     <img src="https://i.postimg.cc/BvZn20tB/Apps-Reseau.png" class="thumbnail" onclick="showSubGallery('Apps_Reseau','subGallery2')">
     <img src="https://i.postimg.cc/0Nt2fBwR/Magasins.png" class="thumbnail" onclick="showSubGallery('Magasins','subGallery2')">
     <img src="https://i.postimg.cc/DZ8fYPrW/Microsoft.png" class="thumbnail" onclick="showSubGallery('Microsoft','subGallery2')">
