--- a/index.html
+++ b/index.html
@@ -357,14 +357,14 @@
     <!-- Barre de navigation -->
     <div class="gallery2">
     <img src="Barre_navigation/Apps-Courantes.png" class="thumbnail" onclick="showSubGallery('Apps_Courantes','subGallery2')">
-    <img src="https://i.postimg.cc/BvZn20tB/Apps-Reseau.png" class="thumbnail" onclick="showSubGallery('Apps_Reseau','subGallery2')">
-    <img src="https://i.postimg.cc/0Nt2fBwR/Magasins.png" class="thumbnail" onclick="showSubGallery('Magasins','subGallery2')">
-    <img src="https://i.postimg.cc/DZ8fYPrW/Microsoft.png" class="thumbnail" onclick="showSubGallery('Microsoft','subGallery2')">
-    <img src="https://i.postimg.cc/Y9Z2cLRd/No-De-Permis.png" class="thumbnail" onclick="showSubGallery('No_De_Permis','subGallery2')">
-    <img src="https://i.postimg.cc/ZnNbJYD4/Personnel.png" class="thumbnail" onclick="showSubGallery('Personnel','subGallery2')">
-    <img src="https://i.postimg.cc/T36wYm6S/Informations.png" class="thumbnail" onclick="showSubGallery('Informations','subGallery1')">
-    <img src="https://i.postimg.cc/NfTFcDWm/Films.png" class="thumbnail" onclick="showSubGallery('Films','subGallery1')">
-    <img src="https://i.postimg.cc/bYSNxLYW/Series.png" class="thumbnail" onclick="showSubGallery('Series','subGallery1')">
+    <img src="Barre_navigation/Apps-Reseau.png" class="thumbnail" onclick="showSubGallery('Apps_Reseau','subGallery2')">
+    <img src="Barre_navigation/Magasins.png" class="thumbnail" onclick="showSubGallery('Magasins','subGallery2')">
+    <img src="Barre_navigation/Microsoft.png" class="thumbnail" onclick="showSubGallery('Microsoft','subGallery2')">
+    <img src="Barre_navigation/No-De-Permis.png" class="thumbnail" onclick="showSubGallery('No_De_Permis','subGallery2')">
+    <img src="Barre_navigation/Personnel.png" class="thumbnail" onclick="showSubGallery('Personnel','subGallery2')">
+    <img src="Barre_navigation/Informations.png" class="thumbnail" onclick="showSubGallery('Informations','subGallery1')">
+    <img src="Barre_navigation/Films.png" class="thumbnail" onclick="showSubGallery('Films','subGallery1')">
+    <img src="Barre_navigation/Series.png" class="thumbnail" onclick="showSubGallery('Series','subGallery1')">
     </div>
 
     <!-- conteneurs -->
