--- a/index.html
+++ b/index.html
@@ -989,19 +989,19 @@
         },
         gallery2: {
           Apps_Courantes: [
-            { src: "https://i.postimg.cc/tCw6fSZF/Adobe.jpg", link: "https://www.adobe.com/ca_fr/" },
-            { src: "https://i.postimg.cc/9MQn4h67/Audacity.png", link: "https://www.audacityteam.org/" },
-            { src: "https://i.postimg.cc/5yXm15KQ/bitdefender.jpg", link: "https://www.bitdefender.com/fr-fr/" },
-            { src: "https://i.postimg.cc/B63pTGVN/Bit-Warden.png", link: "https://bitwarden.com/" },
-            { src: "https://i.postimg.cc/dVPB9byV/CDBurner-XP.png", link: "https://cdburnerxp.se" },
-            { src: "https://i.postimg.cc/fR0f1L4B/DVD-Flick.jpg", link: "https://www.dvdflick.net/" },
-            { src: "https://i.postimg.cc/pdfYX6Lj/DVDVideo-Soft.jpg", link: "https://www.dvdvideosoft.com/" },
-            { src: "https://i.postimg.cc/658rG3Qt/Izarc.jpg", link: "https://www.izarc.org/" },
-            { src: "https://i.postimg.cc/1RHCKfPF/MakeMKV.jpg", link: "https://www.makemkv.com/" },
-            { src: "https://i.postimg.cc/SK2h3HkW/Power-Toys.jpg", link: "https://learn.microsoft.com/en-us/windows/powertoys/install" },
-            { src: "https://i.postimg.cc/qqnpMHdd/Spotify.jpg", link: "https://www.spotify.com/ca-fr/premium/" },
-            { src: "https://i.postimg.cc/Zntfm8qq/ultraviewer.png", link: "https://www.ultraviewer.net/fr/" },
-            { src: "https://i.postimg.cc/wB2yr8Bw/VLC.png", link: "https://www.videolan.org/vlc/" }
+            { src: "Apps_courantes/Adobe.jpg", link: "https://www.adobe.com/ca_fr/" },
+            { src: "Apps_courantes/Audacity.png", link: "https://www.audacityteam.org/" },
+            { src: "Apps_courantes/bitdefender.jpg", link: "https://www.bitdefender.com/fr-fr/" },
+            { src: "Apps_courantes/Bit-Warden.png", link: "https://bitwarden.com/" },
+            { src: "Apps_courantes/CDBurner-XP.png", link: "https://cdburnerxp.se" },
+            { src: "Apps_courantes/DVD-Flick.jpg", link: "https://www.dvdflick.net/" },
+            { src: "Apps_courantes/DVDVideo-Soft.jpg", link: "https://www.dvdvideosoft.com/" },
+            { src: "Apps_courantes/Izarc.jpg", link: "https://www.izarc.org/" },
+            { src: "Apps_courantes/MakeMKV.jpg", link: "https://www.makemkv.com/" },
+            { src: "Apps_courantes/Power-Toys.jpg", link: "https://learn.microsoft.com/en-us/windows/powertoys/install" },
+            { src: "Apps_courantes/Spotify.jpg", link: "https://www.spotify.com/ca-fr/premium/" },
+            { src: "Apps_courantes/ultraviewer.png", link: "https://www.ultraviewer.net/fr/" },
+            { src: "Apps_courantes/VLC.png", link: "https://www.videolan.org/vlc/" }
           ],
           Apps_Reseau: [
             { src: "https://i.postimg.cc/rmChXX93/CISSS-Cote-Nord.jpg", link: "http://cissscotenord.intranet.reg09.rtss.qc.ca/" },
