--- a/index.html
+++ b/index.html
@@ -1004,29 +1004,29 @@
             { src: "Apps_courantes/VLC.png", link: "https://www.videolan.org/vlc/" }
           ],
           Apps_Reseau: [
-            { src: "https://i.postimg.cc/rmChXX93/CISSS-Cote-Nord.jpg", link: "http://cissscotenord.intranet.reg09.rtss.qc.ca/" },
-            { src: "https://i.postimg.cc/jj66C6JJ/Planner-Dossiers-En-Cours.png", link: "https://planner.cloud.microsoft/webui/plan/gjeHVYJcgE-4mhqJOit2-WUABZAE/view/board?tid=06e1fe28-5f8b-4075-bf6c-ae24be1a7992" },
-            { src: "https://i.postimg.cc/NMwNzfRR/Booking.png", link: "https://outlook.office.com/book/Gf5e7fcba3d784b9684e8cb3fa3ac3eb5@ssss.gouv.qc.ca/?ae=true&login_hint" },
-            { src: "https://i.postimg.cc/4yfWXLLd/Booking-2.png", link: "https://outlook.office.com/bookings/calendar?action=goto&src=mail-goto" },
-            { src: "https://i.postimg.cc/WzYwT2qW/Logibec-Web.jpg", link: "https://grhpaie09.cisss-cotenord.gouv.qc.ca/" },
-            { src: "https://i.postimg.cc/xj6RKPpv/Octopus-2.png", link: "http://RedirectOctopus" },
-            { src: "https://i.postimg.cc/tCfNc4j7/Octopus-3.jpg", link: "https://app3.octopus-itsm.com/cissscotenord/Web/Login.aspx?Tech=true" },
-            { src: "https://i.postimg.cc/rp2C8Zzk/Gestred.png", link: "http://g75.rtss.msss.rtss.qc.ca/G74Acces.asp" },
-            { src: "https://i.postimg.cc/sXycJHRc/Integration-Sante.png", link: "https://sw07001sddc02.reg09.rtss.qc.ca/sddc-console/signin?logout" },
-            { src: "https://i.postimg.cc/C5xs3Z5n/IRIS.png", link: "https://www.irisreservation.ca/Public/Login.aspx?ReturnUrl=%2f" },
-            { src: "https://i.postimg.cc/Y0PYTbTT/Site-WEB-DRI.png", link: "https://msss365.sharepoint.com/sites/CISSSCN-DRI-SPO" },
-            { src: "https://i.postimg.cc/5tmvfxZB/Technologie-De-l-Information-Dans-Sharepoint.png", link: "https://msss365.sharepoint.com/sites/MSSS-Technologiesdelinformation?xsdata=MDV8MDJ8cmVhbC5tYXJ0aW4uMDljaXNzc0Bzc3NzLmdvdXYucWMuY2F8YmI3MzU2MGJjNmViNDM4ZmEzNzIwOGRjYmQ2Yzc5NmZ8MDZlMWZlMjg1ZjhiNDA3NWJmNmNhZTI0YmUxYTc5OTJ8MHwwfDYzODU5MzUyMTA0ODQ5MjkxNXxVbmtub3dufFRXRnBiR1pzYjNkOGV5SldJam9pTUM0d0xqQXdNREFpTENKUUlqb2lWMmx1TXpJaUxDSkJUaUk2SWsxaGFXd2lMQ0pYVkNJNk1uMD18MHx8fA%3d%3d&sdata=eVd3K00wVzhtWEo3aE5YSDB5VDErYk96VDlsQlQyWkZjeE80eWdHRVhaaz0%3d" },
-            { src: "https://i.postimg.cc/nr30r4g1/DGTI.png", link: "https://espaceclient.ti.msss.rtss.qc.ca/Login.aspx" },
-            { src: "https://i.postimg.cc/Zqmpk9DY/VDG.png", link: "https://cissscotenord.vdg.quebec/admin/login.asp" },
-            { src: "https://i.postimg.cc/7P9BK4hT/Clicsante.png", link: "https://portal3.clicsante.ca/" },
-            { src: "https://i.postimg.cc/3rfXyxW9/Smart-Sheet.png", link: "https://app.smartsheet.com/b/home?lang=fr_CA" },
-            { src: "https://i.postimg.cc/L6qzjF1S/SCT.png", link: "https://tresor.qc/cas/login?service=https://tresor.qc/sigri/f?p=10340:1:11615114516546" },
-            { src: "https://i.postimg.cc/65QMSP4b/ENA.png", link: "https://fcp.rtss.qc.ca/ena-login/index.html" },
-            { src: "https://i.postimg.cc/nVGWN7Rr/Assemblee-Nationale.png", link: "https://www.assnat.qc.ca/fr/index.html" },
-            { src: "https://i.postimg.cc/GmHSBfcT/Canada.png", link: "https://www.canada.ca/fr.html" },
-            { src: "https://i.postimg.cc/nLmR2Q9H/Chambre-Des-Communes-Du-Canada.jpg.jpg", link: "https://www.noscommunes.ca/fr" },
-            { src: "https://raw.githubusercontent.com/marrea63/RM-MonSiteWeb/refs/heads/main/Apps_Reseau/Agrement.JPG", link: "https://msss365.sharepoint.com/sites/CISSSCN-Agrement?ovuser=06e1fe28-5f8b-4075-bf6c-ae24be1a7992%2Creal.martin.09cisss%40ssss.gouv.qc.ca&OR=Teams-HL&CT=1710352625381&clickparams=eyJBcHBOYW1lIjoiVGVhbXMtRGVza3RvcCIsIkFwcFZlcnNpb24iOiI0OS8yNDAyMDIwNTUxNSIsIkhhc0ZlZGVyYXRlZFVzZXIiOmZhbHNlfQ%3D%3D" },
-            { src: "https://i.postimg.cc/wv0hQ62q/Sharepoint.jpg", link: "https://msss365.sharepoint.com/teams/CISSSCN-DRIGestionprojets-TM" }
+            { src: "Apps_Reseau/CISSS-Cote-Nord.jpg", link: "http://cissscotenord.intranet.reg09.rtss.qc.ca/" },
+            { src: "Apps_Reseau/Planner-Dossiers-En-Cours.png", link: "https://planner.cloud.microsoft/webui/plan/gjeHVYJcgE-4mhqJOit2-WUABZAE/view/board?tid=06e1fe28-5f8b-4075-bf6c-ae24be1a7992" },
+            { src: "Apps_Reseau/Booking.png", link: "https://outlook.office.com/book/Gf5e7fcba3d784b9684e8cb3fa3ac3eb5@ssss.gouv.qc.ca/?ae=true&login_hint" },
+            { src: "Apps_Reseau/Booking-2.png", link: "https://outlook.office.com/bookings/calendar?action=goto&src=mail-goto" },
+            { src: "Apps_Reseau/Logibec-Web.jpg", link: "https://grhpaie09.cisss-cotenord.gouv.qc.ca/" },
+            { src: "Apps_Reseau/Octopus-2.png", link: "http://RedirectOctopus" },
+            { src: "Apps_Reseau/Octopus-3.jpg", link: "https://app3.octopus-itsm.com/cissscotenord/Web/Login.aspx?Tech=true" },
+            { src: "Apps_Reseau/Gestred.png", link: "http://g75.rtss.msss.rtss.qc.ca/G74Acces.asp" },
+            { src: "Apps_Reseau/Integration-Sante.png", link: "https://sw07001sddc02.reg09.rtss.qc.ca/sddc-console/signin?logout" },
+            { src: "Apps_Reseau/IRIS.png", link: "https://www.irisreservation.ca/Public/Login.aspx?ReturnUrl=%2f" },
+            { src: "Apps_Reseau/Site-WEB-DRI.png", link: "https://msss365.sharepoint.com/sites/CISSSCN-DRI-SPO" },
+            { src: "Apps_Reseau/Technologie-De-l-Information-Dans-Sharepoint.png", link: "https://msss365.sharepoint.com/sites/MSSS-Technologiesdelinformation?xsdata=MDV8MDJ8cmVhbC5tYXJ0aW4uMDljaXNzc0Bzc3NzLmdvdXYucWMuY2F8YmI3MzU2MGJjNmViNDM4ZmEzNzIwOGRjYmQ2Yzc5NmZ8MDZlMWZlMjg1ZjhiNDA3NWJmNmNhZTI0YmUxYTc5OTJ8MHwwfDYzODU5MzUyMTA0ODQ5MjkxNXxVbmtub3dufFRXRnBiR1pzYjNkOGV5SldJam9pTUM0d0xqQXdNREFpTENKUUlqb2lWMmx1TXpJaUxDSkJUaUk2SWsxaGFXd2lMQ0pYVkNJNk1uMD18MHx8fA%3d%3d&sdata=eVd3K00wVzhtWEo3aE5YSDB5VDErYk96VDlsQlQyWkZjeE80eWdHRVhaaz0%3d" },
+            { src: "Apps_Reseau/DGTI.png", link: "https://espaceclient.ti.msss.rtss.qc.ca/Login.aspx" },
+            { src: "Apps_Reseau/VDG.png", link: "https://cissscotenord.vdg.quebec/admin/login.asp" },
+            { src: "Apps_Reseau/Clicsante.png", link: "https://portal3.clicsante.ca/" },
+            { src: "Apps_Reseau/Smart-Sheet.png", link: "https://app.smartsheet.com/b/home?lang=fr_CA" },
+            { src: "Apps_Reseau/SCT.png", link: "https://tresor.qc/cas/login?service=https://tresor.qc/sigri/f?p=10340:1:11615114516546" },
+            { src: "Apps_Reseau/ENA.png", link: "https://fcp.rtss.qc.ca/ena-login/index.html" },
+            { src: "Apps_Reseau/Assemblee-Nationale.png", link: "https://www.assnat.qc.ca/fr/index.html" },
+            { src: "Apps_Reseau/Canada.png", link: "https://www.canada.ca/fr.html" },
+            { src: "Apps_Reseau/Chambre-Des-Communes-Du-Canada.jpg.jpg", link: "https://www.noscommunes.ca/fr" },
+            { src: "Apps_Reseau/Agrement.JPG", link: "https://msss365.sharepoint.com/sites/CISSSCN-Agrement?ovuser=06e1fe28-5f8b-4075-bf6c-ae24be1a7992%2Creal.martin.09cisss%40ssss.gouv.qc.ca&OR=Teams-HL&CT=1710352625381&clickparams=eyJBcHBOYW1lIjoiVGVhbXMtRGVza3RvcCIsIkFwcFZlcnNpb24iOiI0OS8yNDAyMDIwNTUxNSIsIkhhc0ZlZGVyYXRlZFVzZXIiOmZhbHNlfQ%3D%3D" },
+            { src: "Apps_Reseau/Sharepoint.jpg", link: "https://msss365.sharepoint.com/teams/CISSSCN-DRIGestionprojets-TM" }
           ],
             No_De_Permis: 
           [
