--- a/index.html
+++ b/index.html
@@ -1005,10 +1005,10 @@
           ],
           Apps_Reseau: [
             { src: "Apps_Reseau/CISSS-Cote-Nord.jpg", link: "http://cissscotenord.intranet.reg09.rtss.qc.ca/" },
-            { src: "Apps_Reseau/Planner-Dossiers-En-Cours.png", link: "https://planner.cloud.microsoft/webui/plan/gjeHVYJcgE-4mhqJOit2-WUABZAE/view/board?tid=06e1fe28-5f8b-4075-bf6c-ae24be1a7992" },
+            { src: "Apps_Reseau/Planner-Dossiers_en_cours.png", link: "https://planner.cloud.microsoft/webui/plan/gjeHVYJcgE-4mhqJOit2-WUABZAE/view/board?tid=06e1fe28-5f8b-4075-bf6c-ae24be1a7992" },
             { src: "Apps_Reseau/Booking.png", link: "https://outlook.office.com/book/Gf5e7fcba3d784b9684e8cb3fa3ac3eb5@ssss.gouv.qc.ca/?ae=true&login_hint" },
             { src: "Apps_Reseau/Booking-2.png", link: "https://outlook.office.com/bookings/calendar?action=goto&src=mail-goto" },
-            { src: "Apps_Reseau/Logibec-Web.jpg", link: "https://grhpaie09.cisss-cotenord.gouv.qc.ca/" },
+            { src: "Apps_Reseau/Logibec-Web.JPG", link: "https://grhpaie09.cisss-cotenord.gouv.qc.ca/" },
             { src: "Apps_Reseau/Octopus-2.png", link: "http://RedirectOctopus" },
             { src: "Apps_Reseau/Octopus-3.jpg", link: "https://app3.octopus-itsm.com/cissscotenord/Web/Login.aspx?Tech=true" },
             { src: "Apps_Reseau/Gestred.png", link: "http://g75.rtss.msss.rtss.qc.ca/G74Acces.asp" },
