--- a/index.html
+++ b/index.html
@@ -1012,10 +1012,10 @@
             { src: "Apps_Reseau/Octopus-2.png", link: "http://RedirectOctopus" },
             { src: "Apps_Reseau/Octopus-3.jpg", link: "https://app3.octopus-itsm.com/cissscotenord/Web/Login.aspx?Tech=true" },
             { src: "Apps_Reseau/Gestred.png", link: "http://g75.rtss.msss.rtss.qc.ca/G74Acces.asp" },
-            { src: "Apps_Reseau/Integration_Sante.png", link: "https://sw07001sddc02.reg09.rtss.qc.ca/sddc-console/signin?logout" },
+            { src: "Apps_Reseau/Integration-Sante.png", link: "https://sw07001sddc02.reg09.rtss.qc.ca/sddc-console/signin?logout" },
             { src: "Apps_Reseau/IRIS.png", link: "https://www.irisreservation.ca/Public/Login.aspx?ReturnUrl=%2f" },
-            { src: "Apps_Reseau/Site-WEB-DRI.png", link: "https://msss365.sharepoint.com/sites/CISSSCN-DRI-SPO" },
-            { src: "Apps_Reseau/Technologie-De-l-Information-Dans-Sharepoint.png", link: "https://msss365.sharepoint.com/sites/MSSS-Technologiesdelinformation?xsdata=MDV8MDJ8cmVhbC5tYXJ0aW4uMDljaXNzc0Bzc3NzLmdvdXYucWMuY2F8YmI3MzU2MGJjNmViNDM4ZmEzNzIwOGRjYmQ2Yzc5NmZ8MDZlMWZlMjg1ZjhiNDA3NWJmNmNhZTI0YmUxYTc5OTJ8MHwwfDYzODU5MzUyMTA0ODQ5MjkxNXxVbmtub3dufFRXRnBiR1pzYjNkOGV5SldJam9pTUM0d0xqQXdNREFpTENKUUlqb2lWMmx1TXpJaUxDSkJUaUk2SWsxaGFXd2lMQ0pYVkNJNk1uMD18MHx8fA%3d%3d&sdata=eVd3K00wVzhtWEo3aE5YSDB5VDErYk96VDlsQlQyWkZjeE80eWdHRVhaaz0%3d" },
+            { src: "Apps_Reseau/Site_WEB-DRI.png", link: "https://msss365.sharepoint.com/sites/CISSSCN-DRI-SPO" },
+            { src: "Apps_Reseau/Technologie_de-l'information_dans_Sharepoint.png", link: "https://msss365.sharepoint.com/sites/MSSS-Technologiesdelinformation?xsdata=MDV8MDJ8cmVhbC5tYXJ0aW4uMDljaXNzc0Bzc3NzLmdvdXYucWMuY2F8YmI3MzU2MGJjNmViNDM4ZmEzNzIwOGRjYmQ2Yzc5NmZ8MDZlMWZlMjg1ZjhiNDA3NWJmNmNhZTI0YmUxYTc5OTJ8MHwwfDYzODU5MzUyMTA0ODQ5MjkxNXxVbmtub3dufFRXRnBiR1pzYjNkOGV5SldJam9pTUM0d0xqQXdNREFpTENKUUlqb2lWMmx1TXpJaUxDSkJUaUk2SWsxaGFXd2lMQ0pYVkNJNk1uMD18MHx8fA%3d%3d&sdata=eVd3K00wVzhtWEo3aE5YSDB5VDErYk96VDlsQlQyWkZjeE80eWdHRVhaaz0%3d" },
             { src: "Apps_Reseau/DGTI.png", link: "https://espaceclient.ti.msss.rtss.qc.ca/Login.aspx" },
             { src: "Apps_Reseau/VDG.png", link: "https://cissscotenord.vdg.quebec/admin/login.asp" },
             { src: "Apps_Reseau/Clicsante.png", link: "https://portal3.clicsante.ca/" },
