--- a/index.html
+++ b/index.html
@@ -1015,18 +1015,18 @@
             { src: "Apps_Reseau/Integration-Sante.png", link: "https://sw07001sddc02.reg09.rtss.qc.ca/sddc-console/signin?logout" },
             { src: "Apps_Reseau/IRIS.png", link: "https://www.irisreservation.ca/Public/Login.aspx?ReturnUrl=%2f" },
             { src: "Apps_Reseau/Site_WEB-DRI.png", link: "https://msss365.sharepoint.com/sites/CISSSCN-DRI-SPO" },
-            { src: "Apps_Reseau/Technologie_de-l'information_dans_Sharepoint.png", link: "https://msss365.sharepoint.com/sites/MSSS-Technologiesdelinformation?xsdata=MDV8MDJ8cmVhbC5tYXJ0aW4uMDljaXNzc0Bzc3NzLmdvdXYucWMuY2F8YmI3MzU2MGJjNmViNDM4ZmEzNzIwOGRjYmQ2Yzc5NmZ8MDZlMWZlMjg1ZjhiNDA3NWJmNmNhZTI0YmUxYTc5OTJ8MHwwfDYzODU5MzUyMTA0ODQ5MjkxNXxVbmtub3dufFRXRnBiR1pzYjNkOGV5SldJam9pTUM0d0xqQXdNREFpTENKUUlqb2lWMmx1TXpJaUxDSkJUaUk2SWsxaGFXd2lMQ0pYVkNJNk1uMD18MHx8fA%3d%3d&sdata=eVd3K00wVzhtWEo3aE5YSDB5VDErYk96VDlsQlQyWkZjeE80eWdHRVhaaz0%3d" },
+            { src: "Apps_Reseau/Technologie_de_l'information_dans_Sharepoint.png", link: "https://msss365.sharepoint.com/sites/MSSS-Technologiesdelinformation?xsdata=MDV8MDJ8cmVhbC5tYXJ0aW4uMDljaXNzc0Bzc3NzLmdvdXYucWMuY2F8YmI3MzU2MGJjNmViNDM4ZmEzNzIwOGRjYmQ2Yzc5NmZ8MDZlMWZlMjg1ZjhiNDA3NWJmNmNhZTI0YmUxYTc5OTJ8MHwwfDYzODU5MzUyMTA0ODQ5MjkxNXxVbmtub3dufFRXRnBiR1pzYjNkOGV5SldJam9pTUM0d0xqQXdNREFpTENKUUlqb2lWMmx1TXpJaUxDSkJUaUk2SWsxaGFXd2lMQ0pYVkNJNk1uMD18MHx8fA%3d%3d&sdata=eVd3K00wVzhtWEo3aE5YSDB5VDErYk96VDlsQlQyWkZjeE80eWdHRVhaaz0%3d" },
             { src: "Apps_Reseau/DGTI.png", link: "https://espaceclient.ti.msss.rtss.qc.ca/Login.aspx" },
             { src: "Apps_Reseau/VDG.png", link: "https://cissscotenord.vdg.quebec/admin/login.asp" },
             { src: "Apps_Reseau/Clicsante.png", link: "https://portal3.clicsante.ca/" },
-            { src: "Apps_Reseau/Smart-Sheet.png", link: "https://app.smartsheet.com/b/home?lang=fr_CA" },
+            { src: "Apps_Reseau/SmartSheet.png", link: "https://app.smartsheet.com/b/home?lang=fr_CA" },
             { src: "Apps_Reseau/SCT.png", link: "https://tresor.qc/cas/login?service=https://tresor.qc/sigri/f?p=10340:1:11615114516546" },
             { src: "Apps_Reseau/ENA.png", link: "https://fcp.rtss.qc.ca/ena-login/index.html" },
             { src: "Apps_Reseau/Assemblee-Nationale.png", link: "https://www.assnat.qc.ca/fr/index.html" },
             { src: "Apps_Reseau/Canada.png", link: "https://www.canada.ca/fr.html" },
             { src: "Apps_Reseau/Chambre-Des-Communes-Du-Canada.jpg.jpg", link: "https://www.noscommunes.ca/fr" },
             { src: "Apps_Reseau/Agrement.JPG", link: "https://msss365.sharepoint.com/sites/CISSSCN-Agrement?ovuser=06e1fe28-5f8b-4075-bf6c-ae24be1a7992%2Creal.martin.09cisss%40ssss.gouv.qc.ca&OR=Teams-HL&CT=1710352625381&clickparams=eyJBcHBOYW1lIjoiVGVhbXMtRGVza3RvcCIsIkFwcFZlcnNpb24iOiI0OS8yNDAyMDIwNTUxNSIsIkhhc0ZlZGVyYXRlZFVzZXIiOmZhbHNlfQ%3D%3D" },
-            { src: "Apps_Reseau/Sharepoint.jpg", link: "https://msss365.sharepoint.com/teams/CISSSCN-DRIGestionprojets-TM" }
+            { src: "Apps_Reseau/Sharepoint.JPG", link: "https://msss365.sharepoint.com/teams/CISSSCN-DRIGestionprojets-TM" }
           ],
             No_De_Permis: 
           [
