--- a/index.html
+++ b/index.html
@@ -1047,18 +1047,18 @@
           ],
             Magasins: 
           [
-            { src: 'https://i.postimg.cc/QdgQ6kxx/amazon.jpg', link: 'https://www.amazon.ca' },
-            { src: 'https://i.postimg.cc/FH4bSxxj/Bureau-En-Gros.png', link: 'https://www.bureauengros.com/' },
-            { src: 'https://i.postimg.cc/hGS9Nzf8/Canac.png', link: 'https://www.canac.ca/fr' },
-            { src: 'https://i.postimg.cc/7b8z9bF2/Canadian-Tire.png', link: 'https://canadiantire.ca/fr' },
-            { src: 'https://i.postimg.cc/cJXQWxnp/Costco.png', link: 'https://www.costco.ca/?langId=-25' },
-            { src: 'https://i.postimg.cc/rmHxdfgg/Ebay.png', link: 'https://www.cafr.ebay.ca/' },
-            { src: 'https://i.postimg.cc/rydYf36V/Grill-Spot.png', link: 'https://www.grillspot.ca/' },
-            { src: 'https://i.postimg.cc/X7d1b57t/Princess-Auto.png', link: 'https://www.princessauto.com/fr_CA/store' },
-            { src: 'https://i.postimg.cc/NGWCSDY1/Potvin-Et-Bouchard.png', link: 'https://www.potvinbouchard.ca/ca_fr/potvin-bouchard-jonquiere' },
-            { src: 'https://i.postimg.cc/13SC5z8X/RONA.png', link: 'https://www.rona.ca/fr' },
-            { src: 'https://i.postimg.cc/9fFLZNtj/Tanguay.png', link: 'https://www.tanguay.ca/' },
-            { src: 'https://i.postimg.cc/FHxPfQSZ/Walmart.png', link: 'https://walmart.ca/fr' }
+            { src: 'Magasins/amazon.JPG', link: 'https://www.amazon.ca' },
+            { src: 'Magasins/Bureau-En-Gros.png', link: 'https://www.bureauengros.com/' },
+            { src: 'Magasins/Canac.png', link: 'https://www.canac.ca/fr' },
+            { src: 'Magasins/CanadianTire.png', link: 'https://canadiantire.ca/fr' },
+            { src: 'Magasins/Costco.png', link: 'https://www.costco.ca/?langId=-25' },
+            { src: 'Magasins/Ebay.png', link: 'https://www.cafr.ebay.ca/' },
+            { src: 'Magasins/GrillSpot.png', link: 'https://www.grillspot.ca/' },
+            { src: 'Magasins/PrincessAuto.png', link: 'https://www.princessauto.com/fr_CA/store' },
+            { src: 'Magasins/PotvinEtBouchard.png', link: 'https://www.potvinbouchard.ca/ca_fr/potvin-bouchard-jonquiere' },
+            { src: 'Magasins/RONA.png', link: 'https://www.rona.ca/fr' },
+            { src: 'Magasins/Tanguay.png', link: 'https://www.tanguay.ca/' },
+            { src: 'Magasins/Walmart.png', link: 'https://walmart.ca/fr' }
           ],
             Personnel: 
           [
