--- a/index.html
+++ b/index.html
@@ -1048,6 +1048,7 @@
             Magasins: 
           [
             { src: 'Magasins/amazon.JPG', link: 'https://www.amazon.ca' },
+            { src: 'Magasins/BestBuy.png', link: 'https://www.bestbuy.ca/fr-ca' },
             { src: 'Magasins/Bureau-En-Gros.png', link: 'https://www.bureauengros.com/' },
             { src: 'Magasins/Canac.png', link: 'https://www.canac.ca/fr' },
             { src: 'Magasins/CanadianTire.png', link: 'https://canadiantire.ca/fr' },
